# CleanerAdventures_pyqt

./: .gitignore  AboutWidget.py  AuthWidget.py  ControlsWidget.py  GameWidget.py  HighscoresWidget.py  LICENSE  MainWidget.py  Main_App.py  MenuWidget.py  README.md  about_widget.py  auth_widget.py  controller.py  controls_widget.py  energy_view.py  game_data.py  game_over_view.py  game_widget.py  highscores_widget.py  lcd_view.py  log_view.py  main_app.py  main_widget.py  maze_model.py  maze_view.py  menu_widget.py  pyproject.toml  robot_model.py  robot_view.py  scratch.py
game/: Controller.py  EnergyView.py  GameOverView.py  LCDView.py  LogView.py  MazeModel.py  MazeView.py  RobotModel.py  RobotView.py
resources/: highscores.txt  resources.qrc
source/: game_data.py  main_widget.py
source/game/: energy_view.py  game_over_view.py  game_widget.py  lcd_view.py  log_view.py
source/menu/: about_widget.py  auth_widget.py  controls_widget.py  highscores_widget.py  menu_widget.py
source/mvc/: controller.py  maze_model.py  maze_view.py  robot_model.py  robot_view.py
