[tool.poetry]
name = "cleaneradventures-pyqt"
version = "0.1.0"
description = ""
authors = ["Aleksey Khaleev <aleksey52nn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
